--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,53 +21,12 @@ services:
   sql: 
     image: "microsoft/mssql-server-linux"
     environment:
-      SA_PASSWORD: "SimplePass123"
+      SA_PASSWORD: ""
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
-
-  webapi:
-    image: ${DOCKER_REGISTRY-}webapi
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=44337
-      - REDIS_URL=redis://cache
-    ports:
-      - "50987:80"
-      - "44337:443"
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
-    depends_on:
-      - kafka
-      - kibana
-      - redis
-    build:
-      context: .
-      dockerfile: WebApi/Dockerfile
-    environment:
-      KAFKA_BOOTSTRAP-SERVERS: kafka:9092
-
-  consumer:
-    image: ${DOCKER_REGISTRY-}consumer
-    depends_on:
-      - webapi
-      - kibana
-    build:
-      context: .
-      dockerfile: KafkaListener/Dockerfile
-    environment:
-      KAFKA_BOOTSTRAP-SERVERS: kafka:9092
-
-  kibana:
-    image: "nshou/elasticsearch-kibana"
-    ports:
-      - "9200:9200"
-      - "5601:5601"
-
+      
   redis:
-    image: redis
-    container_name: cache
+    image: redis  
     expose:
       - 6379
