--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     image: wurstmeister/zookeeper
     ports:
       - "8080:2181"
-
+   
   kafka:
     image: wurstmeister/kafka
     ports:
       - "9092:9092"
+      - "9093:9093"
+      - "9094:9094"
     depends_on:
       - zookeeper
     environment:
@@ -17,16 +19,17 @@ services:
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "orders:1:1"
-
+   
   sql: 
     image: "microsoft/mssql-server-linux"
     environment:
-      SA_PASSWORD: ""
+      SA_PASSWORD: "Password123"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
+      - "1434:1434"  
       
   redis:
     image: redis  
-    expose:
-      - 6379
+    ports:
+      - "6379:6379"   
