--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "DbConnection": "Server=127.0.0.1,1433;Database=OrderDb;User=sa;Password=SimplePass123;"
+  "DbConnection": "Server=127.0.0.1,1433;Database=OrderDb;User=sa;Password=Password123;Connect Timeout=1000"
 }
